[package]
name = "bytes-helper"
authors = ["DelphinusLab <xgao@zoyoe.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bytes_helper"
path = "src/lib.rs"



[dependencies]
ff = "0.12"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }

[features]
default = []
